fdo#65450 Not to call MenuBar's selection logic for rollover effect

Currently when we rollovers on MenuBar, MenuBar's selection logic
(ChangeHighlightItem et al) is called. But calling these logic on background
window seems to illegal and causes fdo#65450.
(cherry picked from commit 29474304550512f56ef597464bfdb5304bf56bb1)